Document Pekko 2 HEAD and Artery JVM changes
Document that HEAD responses no longer include generated
Content-Length headers, following the Pekko HTTP 2 behavior change.

Also document that clustered Pekko applications using Remote/Artery TCP
may need the jdk.internal.misc add-opens flag because of Agrona.